// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`digit '0' conditional success tests AST matches snapshot 1`] = `"0"`;

exports[`digit '2' conditional success tests AST matches snapshot 1`] = `"2"`;

exports[`digit '9' conditional success tests AST matches snapshot 1`] = `"9"`;

exports[`digit 'a' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "a digit",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`digit 'a1' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "a digit",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`digits '0' conditional success tests AST matches snapshot 1`] = `"0"`;

exports[`digits '22' conditional success tests AST matches snapshot 1`] = `"22"`;

exports[`digits '99' conditional success tests AST matches snapshot 1`] = `"99"`;

exports[`digits 'a' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "multiple digits",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`digits 'a12' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "multiple digits",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;
